# media-tools

./: .gitignore  .pre-commit-config.yaml  README.md  notes.md  pyproject.toml
media_tools/: README.md  mt.py
media_tools/core/: __init__.py  app.py  apps.py  conf.py  loader.py  logs.py  script.py
media_tools/desktop/: apps.py  monitor.py
media_tools/playlist/: apps.py
media_tools/sheets/: apps.py  cleaner.py  odf.py  renderers.py  sheet.py  sources.py  storage.py  xml.py
media_tools/tabs/: apps.py  renderers.py  tabs.py  tabs_interleaved.py
media_tools/tabs/sources/: __init__.py  boiteachansons.py  ultimateg.py
