[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


[tool.poetry]
name = "media-tools"
description = "Utility scripts to ease everyday life."
version = "0.1.0"
authors = ["Thomas Baquet <thomas bkfox net>"]
readme = "README.md"
license = "GPLv3"
packages = [
    { include = "media_tools" },
]

classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3.11",
]


[tool.poetry.scripts]
mt="media_tools.mt:main"

[tool.poetry.dependencies]
python = "^3.11"
httpx = {extras = ["http2"], version = "^0.26.0"}
lxml = "^5.1.0"
requests = "^2.31.0"
pydantic = "^2.6.4"
jinja2 = "^3.1"
ruamel-yaml = "^0.18.6"
odfdo = "^3.8.0"

[tool.poetry.group.dev.dependencies]
pre-commit = "^3.1"
black = "^23.3"
ruff = "^0.0"
pytest = "^8.1.1"

[tool.pytest.ini_options]
python_files = ["tests.py", "test_*.py", "*_tests.py"]

[tool.black]
line-length = 120
exclude = '''
    /(
          \.egg
        | \.git
        | \.hg
        | \.tox
        | \._build
        | \.build
        | \.bulk-out
        | \.dist
        | \.__pycache__
        | \.venv
        | \.migrations
        | \.static
        | \.instance/settings
    )
'''

[tool.ruff]
line-length = 120
exclude = [
    "egg",
    "git",
    "hg",
    "tox",
    "_build",
    "build",
    "dist",
    "__pycache__",
    "venv",
    "*/migrations",
    "static",
    "instance/settings",
]
